src/objects/Address__c.object
<CustomObject>
    <description>Custom object for storing additional addresses for Household Accounts in the Nonprofit Success Pack.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administrative_Area__c</fullName>
        <description>Use this to record the township, municipality, or other civic region associated with this Address.</description>
        <inlineHelpText>Use this to record the township, municipality, or other civic region associated with this Address.</inlineHelpText>
        <label>Administrative Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambiguous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether more than one valid Address was found when attempting to validate it through an external service.</description>
        <inlineHelpText>Indicates whether more than one valid Address was found when attempting to validate it through an external service.</inlineHelpText>
        <label>Ambiguous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>Contains the raw response or an error message.</description>
        <inlineHelpText>Contains the raw response or an error message.</inlineHelpText>
        <label>API Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <description>The congressional district the Address is in.</description>
        <inlineHelpText>The congressional district the Address is in.</inlineHelpText>
        <label>Congressional District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <description>The name of the county the Address is in.</description>
        <inlineHelpText>The name of the county the Address is in.</inlineHelpText>
        <label>County Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Address__c</fullName>
        <description>Indicates whether this is the Default Address to use for the Household and its Contacts.</description>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this is the Default Address to use for the Household and its Contacts.</inlineHelpText>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to TRUE, this address should not be included in automated address update jobs</description>
        <inlineHelpText>If selected, this address won&apos;t be included in address updates from the NCOA or address verification vendor.</inlineHelpText>
        <label>Exclude from Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_MailingAddress__c</fullName>
        <formula>MailingStreet__c &amp; BR() &amp;
MailingStreet2__c &amp; IF(ISBLANK(MailingStreet2__c), &quot;&quot;, BR()) &amp; 
MailingCity__c &amp; IF(ISBLANK(MailingCity__c), &quot;&quot;, &quot;, &quot;) &amp; MailingState__c &amp; &quot; &quot; &amp; MailingPostalCode__c 
&amp; IF(ISBLANK(MailingCountry__c), &quot;&quot;, BR() &amp; MailingCOuntry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_MailingStreetAddress__c</fullName>
        <formula>MailingStreet__c + IF(ISBLANK(MailingStreet2__c), &apos;&apos;, &apos;, &apos; + MailingStreet2__c)</formula>
        <label>Mailing Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>The Address expressed as latitude and longitude.</description>
        <inlineHelpText>The Address expressed as latitude and longitude.</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <description>Lookup to the Account associated with this Address.</description>
        <inlineHelpText>Lookup to the Account associated with this Address.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Latest_End_Date__c</fullName>
        <description>The most recent ending date that this Address was used. Generally used with Latest Start Date to track a date range for an Address that&apos;s no longer in use.</description>
        <inlineHelpText>The most recent ending date that this Address was used. Generally used with Latest Start Date to track a date range for an Address that&apos;s no longer in use.</inlineHelpText>
        <label>Latest End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Date__c</fullName>
        <description>The most recent starting date that this Address was used. Generally used with Latest End Date to track a date range for an Address that&apos;s no longer in use.</description>
        <inlineHelpText>The most recent starting date that this Address was used. Generally used with Latest End Date to track a date range for an Address that&apos;s no longer in use.</inlineHelpText>
        <label>Latest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet2__c</fullName>
        <label>Mailing Street2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCOA_Evaluation_Date__c</fullName>
        <description>The date and time the address was evaluated by an NCOA process</description>
        <inlineHelpText>The most recent date and time the address was evaluated by the NCOA vendor.</inlineHelpText>
        <label>NCOA Evaluation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NCOA_Result_Code__c</fullName>
        <description>The result code form the NCOA vendor</description>
        <inlineHelpText>The result code form the NCOA vendor.</inlineHelpText>
        <label>NCOA Result Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Verification_Address__c</fullName>
        <description>Stores the Address as it was before verification with a remote service, in case any information is lost in the verification process.</description>
        <inlineHelpText>Stores the Address as it was before verification with a remote service, in case any information is lost in the verification process.</inlineHelpText>
        <label>Pre-Verification Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seasonal_End_Day__c</fullName>
        <description>The day of the month when this Address no longer replaces the Default Address.</description>
        <inlineHelpText>The day of the month when this Address no longer replaces the Default Address.</inlineHelpText>
        <label>Seasonal End Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seasonal_End_Month__c</fullName>
        <description>The month of the year when this Address no longer replaces the Default Address.</description>
        <inlineHelpText>The month of the year when this Address no longer replaces the Default Address.</inlineHelpText>
        <label>Seasonal End Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seasonal_Start_Day__c</fullName>
        <description>The day of the month when this Address replaces the Default Address.</description>
        <inlineHelpText>The day of the month when this Address replaces the Default Address.</inlineHelpText>
        <label>Seasonal Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seasonal_Start_Month__c</fullName>
        <description>The month of the year when this Address replaces the Default Address.</description>
        <inlineHelpText>The month of the year when this Address replaces the Default Address.</inlineHelpText>
        <label>Seasonal Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Lower_District__c</fullName>
        <description>The state lower district (such as a state assembly district) this address belongs to.</description>
        <inlineHelpText>The state lower district (such as a state assembly district) this Address belongs to.</inlineHelpText>
        <label>State Lower District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Upper_District__c</fullName>
        <description>The state upper district (such as state senate district) this address belongs to.</description>
        <inlineHelpText>The state upper district (such as state senate district) this Address belongs to.</inlineHelpText>
        <label>State Upper District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the address is undeliverable.</description>
        <inlineHelpText>Indicates the address is undeliverable.</inlineHelpText>
        <label>Undeliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>If this Address requires verification, click the Show more actions dropdown arrow in the upper right and then click Verify Address. Consult NPSP documentation for more information on Address Verification.</description>
        <inlineHelpText>If this Address requires verification, click the Show more actions dropdown arrow in the upper right and then click Verify Address. Consult NPSP documentation for more information on Address Verification.</inlineHelpText>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <description>The date and time the address was verified</description>
        <inlineHelpText>The most recent date and time the address was verified.</inlineHelpText>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Address has been verified by an external address verification service.</description>
        <inlineHelpText>Indicates whether the Address has been verified by an external address verification service.</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>